changed z-index for .nav-wrapper to 2. Fixed dropdown issue.

--- a/docs/stylesheets/projects.css
+++ b/docs/stylesheets/projects.css
@@ -3,7 +3,7 @@
 }
 
 .nav-wrapper {
-  z-index: 1;
+  z-index: 999;
 }
 
 .nav-wrapper .social {
